--- a/templates/base.html
+++ b/templates/base.html
@@ -253,6 +253,7 @@
             });
         });
     </script>
+    <script src="{{ url_for('static', filename='js/push.js') }}" defer></script>
 </head>
 <body class="bg-background-light dark:bg-background-dark font-display">
     {% block content %}{% endblock %}
